feat: support dynamic type & rate limit (#12)